# flashcards-generator

./: .coverage  .gitignore  .pre-commit-config.yaml  .project-standards.yaml  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  release.yml
src/flashcards_generator/: AGENTS.md  __main__.py
src/flashcards_generator/adapters/: __init__.py  notebooklm_adapter.py
src/flashcards_generator/application/: AGENTS.md  converter.py  csv_merger.py  exporter.py  math_processor.py  use_cases.py
src/flashcards_generator/application/dto/: __init__.py  generate_request.py  merge_request.py
src/flashcards_generator/domain/: AGENTS.md  entities.py  exceptions.py  value_objects.py
src/flashcards_generator/domain/ports/: __init__.py  chunk_state.py  deck_repository.py  flashcard_generator.py
src/flashcards_generator/infrastructure/: AGENTS.md  chunk_state_repository.py  logging_config.py  notebooklm_client.py  paths.py  pdf_utils.py  semantic_chunker.py
src/flashcards_generator/interfaces/: cli.py
tests/: AGENTS.md  conftest.py  test_semantic_chunking.py
tests/fixtures/: adapter_fixtures.py  domain_fixtures.py  infrastructure_fixtures.py
tests/integration/: test_client_integration.py  test_resume_flow.py
tests/unit/: test_adapter_edge_cases.py  test_adapter_list_delete.py  test_chunk_state_repository.py  test_cli.py  test_cli_cleanup.py  test_cli_merge.py  test_converter.py  test_coverage_edge_cases.py  test_csv_merger.py  test_entities.py  test_exceptions.py  test_exporter.py  test_logging_config.py  test_main_entry.py  test_math_processor.py  test_notebooklm_adapter.py  test_notebooklm_client.py  test_path_scenarios.py  test_paths.py  test_pdf_utils.py  test_pptx_converter.py  test_safe_filename.py  test_use_cases.py  test_use_cases_edge_cases.py  test_use_cases_resume.py  test_value_objects.py
