[project]
name = "flashcards-generator"
version = "1.0.0"
description = "Gerador de flashcards usando NotebookLM"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "loguru>=0.7.3",
  "notebooklm-py>=0.3.4",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "pypdf>=5.0.0",
]

[project.scripts]
flashcards = "flashcards_generator.interfaces.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-plugins>=2.0.2",
  "pytest-timeout>=2.3.1",
  "python-dotenv>=1.2.2",
  "radon>=6.0.1",
  "ruff>=0.15.6",
  "taskipy>=1.14.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 4
show-fixes = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "Q",  # flake8-quotes
  "FLY",  # flynt
  "PERF",  # Perflint
  "RUF",  # Ruff-specific rules
]
ignore = [
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D107",  # Missing docstring in __init__
  "D203",  # 1 blank line required before class docstring (conflicts with D211)
  "D213",  # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["flashcards_generator"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D",  # Disable all docstring rules in tests
  "S",  # Disable bandit in tests
]
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "integration: marks tests as integration tests (slow)",
  "unit: marks tests as unit tests (fast)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
