[project]
name = "flashcards-generator"
version = "1.0.0"
description = "Gerador de flashcards usando NotebookLM"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "loguru>=0.7.3",
  "notebooklm-py>=0.3.4",
  "playwright>=1.58.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "pypdf>=5.0.0",
  "rich>=14.3.3",
  "tiktoken>=0.9.0",
  "numpy>=2.0.0",
  "scikit-learn>=1.6.0",
]

[project.scripts]
flashcards = "flashcards_generator.interfaces.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-plugins>=2.0.2",
  "pytest-timeout>=2.3.1",
  "python-dotenv>=1.2.2",
  "radon>=6.0.1",
  "ruff>=0.15.6",
  "taskipy>=1.14.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 79
indent-width = 4
show-fixes = true
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
  "integration: marks tests as integration tests (slow)",
  "unit: marks tests as unit tests (fast)",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check"
post_test = "coverage html"
pre_format = "ruff check --fix"
pre_test = "task lint"
quality-gate = "echo '🔍 Checking complexity (max B6)...' && VIOLATIONS=$(uv run radon cc . --min B -s | grep -E 'B \\([7-9]\\)|B \\([1-9][0-9]\\)|[CDEF] \\(' | sort -t'(' -k2 -n -r) && if [ -n \"$VIOLATIONS\" ]; then echo ''; echo '❌ QUALITY GATE FAILED'; echo 'Complexity threshold: B(6) maximum'; echo 'Following functions exceed limit:'; echo ''; echo \"$VIOLATIONS\" | while read line; do echo \"  $line\"; done; echo ''; exit 1; else echo '✅ All functions within B(6) limit'; fi && uv run radon mi api/ --min B -nb"
sonar-complex = "radon cc . --min B -nb -s --average"
sonar-maintain = "radon mi api/ --min B -nb -s"
sonar-report = "radon cc . -a -s --total-average && echo '---' && radon mi . -s && echo '---' && radon raw . -s"
test = "pytest -s -x --cov=api -vv"
typecheck = "mypy ."
